# Copyright (C) 2000 MySQL AB & MySQL Finland AB & TCX DataKonsult AB
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# License along with this library; if not, write to the Free
# Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
# MA 02111-1307, USA

BUILT_SOURCES =		mysql_version.h my_config.h
pkginclude_HEADERS =	dbug.h m_string.h my_sys.h mysql.h mysql_com.h  \
			mysqld_error.h my_list.h m_ctype.h  \
			my_pthread.h my_no_pthread.h errmsg.h  \
			my_global.h my_net.h  \
			$(BUILT_SOURCES)
noinst_HEADERS =	config-win.h \
			my_dir.h mysys_err.h \
			my_alarm.h \
			hash.h thr_alarm.h \
			getopt.h violite.h  \
			mysql_version.h.in

